transpiler/source_files/transpiler_beta_v2/rulesParser.py
# Generated from rules.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class rulesParser ( Parser ):

    grammarFileName = "rules.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\n'", "':'", "'('", "')'", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "'='", "'>'", "'<'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "INTEGER", "NUMBER", "OUTPUT", "IF",
                      "ELSE", "ELSEIF", "END", "EQUAL", "GREATER", "LESS",
                      "NUMB", "FLOAT", "USE", "ACTION", "CLASS_KEY", "ACTION_MAIN",
                      "LED", "LED_ON", "LED_OFF", "LED_PIN", "IRED", "IRED_PIN",
                      "IRED_READ", "USONIC", "TRIG_PIN", "ECHO_PIN", "USONIC_DIST",
                      "BTN", "BTN_PIN", "BTN_STATE", "LMTEMP", "LMTEMP_PIN",
                      "LMTEMP_READ", "VARIABLE", "TEXT", "WHITESPACE", "NEWLINE" ]

    RULE_stmt = 0
    RULE_line = 1
    RULE_v_init = 2
    RULE_decl = 3
    RULE_assign = 4
    RULE_both = 5
    RULE_d_type = 6
    RULE_conditional = 7
    RULE_r_if = 8
    RULE_r_elif = 9
    RULE_relation = 10
    RULE_output = 11
    RULE_other = 12
    RULE_use = 13
    RULE_inst = 14
    RULE_lib = 15
    RULE_class_ = 16
    RULE_action = 17
    RULE_funcall = 18
    RULE_funs = 19
    RULE_led_related = 20
    RULE_ired_related = 21
    RULE_usonic_related = 22
    RULE_btn_related = 23
    RULE_lmtemp_related = 24
    RULE_ret_val = 25
    RULE_ret_high_low = 26
    RULE_ret_integer = 27
    RULE_ret_number = 28

    ruleNames =  [ "stmt", "line", "v_init", "decl", "assign", "both", "d_type",
                   "conditional", "r_if", "r_elif", "relation", "output",
                   "other", "use", "inst", "lib", "class_", "action", "funcall",
                   "funs", "led_related", "ired_related", "usonic_related",
                   "btn_related", "lmtemp_related", "ret_val", "ret_high_low",
                   "ret_integer", "ret_number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    INTEGER=5
    NUMBER=6
    OUTPUT=7
    IF=8
    ELSE=9
    ELSEIF=10
    END=11
    EQUAL=12
    GREATER=13
    LESS=14
    NUMB=15
    FLOAT=16
    USE=17
    ACTION=18
    CLASS_KEY=19
    ACTION_MAIN=20
    LED=21
    LED_ON=22
    LED_OFF=23
    LED_PIN=24
    IRED=25
    IRED_PIN=26
    IRED_READ=27
    USONIC=28
    TRIG_PIN=29
    ECHO_PIN=30
    USONIC_DIST=31
    BTN=32
    BTN_PIN=33
    BTN_STATE=34
    LMTEMP=35
    LMTEMP_PIN=36
    LMTEMP_READ=37
    VARIABLE=38
    TEXT=39
    WHITESPACE=40
    NEWLINE=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.LineContext)
            else:
                return self.getTypedRuleContext(rulesParser.LineContext,i)


        def EOF(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.EOF)
            else:
                return self.getToken(rulesParser.EOF, i)

        def getRuleIndex(self):
            return rulesParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = rulesParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 58
                self.line()
                self.state = 59
                _la = self._input.LA(1)
                if not(_la==rulesParser.EOF or _la==rulesParser.T__0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rulesParser.INTEGER) | (1 << rulesParser.NUMBER) | (1 << rulesParser.OUTPUT) | (1 << rulesParser.IF) | (1 << rulesParser.ELSE) | (1 << rulesParser.ELSEIF) | (1 << rulesParser.END) | (1 << rulesParser.USE) | (1 << rulesParser.ACTION) | (1 << rulesParser.CLASS_KEY) | (1 << rulesParser.LED) | (1 << rulesParser.IRED) | (1 << rulesParser.USONIC) | (1 << rulesParser.BTN) | (1 << rulesParser.LMTEMP) | (1 << rulesParser.VARIABLE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def v_init(self):
            return self.getTypedRuleContext(rulesParser.V_initContext,0)


        def conditional(self):
            return self.getTypedRuleContext(rulesParser.ConditionalContext,0)


        def output(self):
            return self.getTypedRuleContext(rulesParser.OutputContext,0)


        def other(self):
            return self.getTypedRuleContext(rulesParser.OtherContext,0)


        def END(self):
            return self.getToken(rulesParser.END, 0)

        def getRuleIndex(self):
            return rulesParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = rulesParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 65
                self.v_init()
                pass

            elif la_ == 2:
                self.state = 66
                self.conditional()
                pass

            elif la_ == 3:
                self.state = 67
                self.output()
                pass

            elif la_ == 4:
                self.state = 68
                self.other()
                pass

            elif la_ == 5:
                self.state = 69
                self.match(rulesParser.END)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class V_initContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(rulesParser.DeclContext,0)


        def assign(self):
            return self.getTypedRuleContext(rulesParser.AssignContext,0)


        def both(self):
            return self.getTypedRuleContext(rulesParser.BothContext,0)


        def getRuleIndex(self):
            return rulesParser.RULE_v_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterV_init" ):
                listener.enterV_init(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitV_init" ):
                listener.exitV_init(self)




    def v_init(self):

        localctx = rulesParser.V_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_v_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 72
                self.decl()
                pass

            elif la_ == 2:
                self.state = 73
                self.assign()
                pass

            elif la_ == 3:
                self.state = 74
                self.both()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def d_type(self):
            return self.getTypedRuleContext(rulesParser.D_typeContext,0)


        def VARIABLE(self):
            return self.getToken(rulesParser.VARIABLE, 0)

        def getRuleIndex(self):
            return rulesParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = rulesParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.d_type()
            self.state = 78
            self.match(rulesParser.VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.VARIABLE)
            else:
                return self.getToken(rulesParser.VARIABLE, i)

        def EQUAL(self):
            return self.getToken(rulesParser.EQUAL, 0)

        def NUMB(self):
            return self.getToken(rulesParser.NUMB, 0)

        def FLOAT(self):
            return self.getToken(rulesParser.FLOAT, 0)

        def ret_val(self):
            return self.getTypedRuleContext(rulesParser.Ret_valContext,0)


        def getRuleIndex(self):
            return rulesParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = rulesParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(rulesParser.VARIABLE)
            self.state = 81
            self.match(rulesParser.EQUAL)
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rulesParser.NUMB]:
                self.state = 82
                self.match(rulesParser.NUMB)
                pass
            elif token in [rulesParser.FLOAT]:
                self.state = 83
                self.match(rulesParser.FLOAT)
                pass
            elif token in [rulesParser.VARIABLE]:
                self.state = 84
                self.match(rulesParser.VARIABLE)
                self.state = 85
                self.match(rulesParser.T__1)
                self.state = 86
                self.ret_val()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BothContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def d_type(self):
            return self.getTypedRuleContext(rulesParser.D_typeContext,0)


        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.VARIABLE)
            else:
                return self.getToken(rulesParser.VARIABLE, i)

        def EQUAL(self):
            return self.getToken(rulesParser.EQUAL, 0)

        def NUMB(self):
            return self.getToken(rulesParser.NUMB, 0)

        def FLOAT(self):
            return self.getToken(rulesParser.FLOAT, 0)

        def ret_val(self):
            return self.getTypedRuleContext(rulesParser.Ret_valContext,0)


        def getRuleIndex(self):
            return rulesParser.RULE_both

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoth" ):
                listener.enterBoth(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoth" ):
                listener.exitBoth(self)




    def both(self):

        localctx = rulesParser.BothContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_both)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.d_type()
            self.state = 90
            self.match(rulesParser.VARIABLE)
            self.state = 91
            self.match(rulesParser.EQUAL)
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rulesParser.NUMB]:
                self.state = 92
                self.match(rulesParser.NUMB)
                pass
            elif token in [rulesParser.FLOAT]:
                self.state = 93
                self.match(rulesParser.FLOAT)
                pass
            elif token in [rulesParser.VARIABLE]:
                self.state = 94
                self.match(rulesParser.VARIABLE)
                self.state = 95
                self.match(rulesParser.T__1)
                self.state = 96
                self.ret_val()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class D_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(rulesParser.INTEGER, 0)

        def NUMBER(self):
            return self.getToken(rulesParser.NUMBER, 0)

        def getRuleIndex(self):
            return rulesParser.RULE_d_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterD_type" ):
                listener.enterD_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitD_type" ):
                listener.exitD_type(self)




    def d_type(self):

        localctx = rulesParser.D_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_d_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            _la = self._input.LA(1)
            if not(_la==rulesParser.INTEGER or _la==rulesParser.NUMBER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r_if(self):
            return self.getTypedRuleContext(rulesParser.R_ifContext,0)


        def r_elif(self):
            return self.getTypedRuleContext(rulesParser.R_elifContext,0)


        def ELSE(self):
            return self.getToken(rulesParser.ELSE, 0)

        def getRuleIndex(self):
            return rulesParser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional" ):
                listener.exitConditional(self)




    def conditional(self):

        localctx = rulesParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_conditional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rulesParser.IF]:
                self.state = 101
                self.r_if()
                pass
            elif token in [rulesParser.ELSEIF]:
                self.state = 102
                self.r_elif()
                pass
            elif token in [rulesParser.ELSE]:
                self.state = 103
                self.match(rulesParser.ELSE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_ifContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(rulesParser.IF, 0)

        def relation(self):
            return self.getTypedRuleContext(rulesParser.RelationContext,0)


        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.VARIABLE)
            else:
                return self.getToken(rulesParser.VARIABLE, i)

        def NUMB(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.NUMB)
            else:
                return self.getToken(rulesParser.NUMB, i)

        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.FLOAT)
            else:
                return self.getToken(rulesParser.FLOAT, i)

        def getRuleIndex(self):
            return rulesParser.RULE_r_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR_if" ):
                listener.enterR_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR_if" ):
                listener.exitR_if(self)




    def r_if(self):

        localctx = rulesParser.R_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_r_if)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(rulesParser.IF)
            self.state = 107
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rulesParser.NUMB) | (1 << rulesParser.FLOAT) | (1 << rulesParser.VARIABLE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 108
            self.relation()
            self.state = 109
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rulesParser.NUMB) | (1 << rulesParser.FLOAT) | (1 << rulesParser.VARIABLE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_elifContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSEIF(self):
            return self.getToken(rulesParser.ELSEIF, 0)

        def relation(self):
            return self.getTypedRuleContext(rulesParser.RelationContext,0)


        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.VARIABLE)
            else:
                return self.getToken(rulesParser.VARIABLE, i)

        def NUMB(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.NUMB)
            else:
                return self.getToken(rulesParser.NUMB, i)

        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.FLOAT)
            else:
                return self.getToken(rulesParser.FLOAT, i)

        def getRuleIndex(self):
            return rulesParser.RULE_r_elif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR_elif" ):
                listener.enterR_elif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR_elif" ):
                listener.exitR_elif(self)




    def r_elif(self):

        localctx = rulesParser.R_elifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_r_elif)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(rulesParser.ELSEIF)
            self.state = 112
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rulesParser.NUMB) | (1 << rulesParser.FLOAT) | (1 << rulesParser.VARIABLE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 113
            self.relation()
            self.state = 114
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rulesParser.NUMB) | (1 << rulesParser.FLOAT) | (1 << rulesParser.VARIABLE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GREATER(self):
            return self.getToken(rulesParser.GREATER, 0)

        def LESS(self):
            return self.getToken(rulesParser.LESS, 0)

        def EQUAL(self):
            return self.getToken(rulesParser.EQUAL, 0)

        def getRuleIndex(self):
            return rulesParser.RULE_relation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelation" ):
                listener.enterRelation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelation" ):
                listener.exitRelation(self)




    def relation(self):

        localctx = rulesParser.RelationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_relation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rulesParser.EQUAL) | (1 << rulesParser.GREATER) | (1 << rulesParser.LESS))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OUTPUT(self):
            return self.getToken(rulesParser.OUTPUT, 0)

        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.VARIABLE)
            else:
                return self.getToken(rulesParser.VARIABLE, i)

        def getRuleIndex(self):
            return rulesParser.RULE_output

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput" ):
                listener.enterOutput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput" ):
                listener.exitOutput(self)




    def output(self):

        localctx = rulesParser.OutputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_output)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(rulesParser.OUTPUT)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119
                self.match(rulesParser.VARIABLE)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==rulesParser.VARIABLE):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OtherContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def use(self):
            return self.getTypedRuleContext(rulesParser.UseContext,0)


        def class_(self):
            return self.getTypedRuleContext(rulesParser.Class_Context,0)


        def action(self):
            return self.getTypedRuleContext(rulesParser.ActionContext,0)


        def inst(self):
            return self.getTypedRuleContext(rulesParser.InstContext,0)


        def funcall(self):
            return self.getTypedRuleContext(rulesParser.FuncallContext,0)


        def getRuleIndex(self):
            return rulesParser.RULE_other

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOther" ):
                listener.enterOther(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOther" ):
                listener.exitOther(self)




    def other(self):

        localctx = rulesParser.OtherContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_other)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rulesParser.USE]:
                self.state = 124
                self.use()
                pass
            elif token in [rulesParser.CLASS_KEY]:
                self.state = 125
                self.class_()
                pass
            elif token in [rulesParser.ACTION]:
                self.state = 126
                self.action()
                pass
            elif token in [rulesParser.LED, rulesParser.IRED, rulesParser.USONIC, rulesParser.BTN, rulesParser.LMTEMP]:
                self.state = 127
                self.inst()
                pass
            elif token in [rulesParser.VARIABLE]:
                self.state = 128
                self.funcall()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(rulesParser.USE, 0)

        def lib(self):
            return self.getTypedRuleContext(rulesParser.LibContext,0)


        def getRuleIndex(self):
            return rulesParser.RULE_use

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUse" ):
                listener.enterUse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUse" ):
                listener.exitUse(self)




    def use(self):

        localctx = rulesParser.UseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_use)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(rulesParser.USE)
            self.state = 132
            self.lib()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstContext(ParserRuleContext):
